# TestBoostBeast

./: CMakeLists.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/beast-client/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/liblog/: CMakeLists.txt  log.cpp
src/libs/liblog/include/: log.h
